--- a/Maps/index.html
+++ b/Maps/index.html
@@ -1,5 +1,7 @@
 <html>
     <body>
+        <div id="map" style="height: 100%;"></div>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC46YrWuepqSXr0Uk5a6yhmjVQZBtTv_EU"></script>
         <script src="./src/index.ts"></script>
     </body>
 </html>
